Path continuation in 404 case

--- a/404.html
+++ b/404.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/">
+    <script>
+      var path = location.pathname + location.search + location.hash
+      if (path !== '/' && path !== '/index.html') {
+        location.replace('/?path=' + encodeURIComponent(path))
+      } else {
+        location.replace('/')
+      }
+    </script>
   </head>
   <body>
     <p>Redirecting…</p>
