--- a/404.html
+++ b/404.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script>
-      var path = location.pathname + location.search + location.hash
-      if (path !== '/' && path !== '/index.html') {
-        location.replace('/?path=' + encodeURIComponent(path))
-      } else {
-        location.replace('/')
-      }
-    </script>
+    <meta http-equiv="refresh" content="0; url=/">
   </head>
   <body>
     <p>Redirecting…</p>
